# ros2_bridge

./: .gitignore  README.md  SOP_MIC_RECORDING.md  install.sh
bridge/: audio_recorder.py  client_session.py  dispatcher.py  main.py  models.py  ros2_adapter.py  server.py
bridge/handlers/: action.py  battery.py  motion.py  navigation.py  network.py  robotinfo.py  voice.py
bridge/msgs/emb_task_msgs/: CMakeLists.txt  package.xml
bridge/msgs/emb_task_msgs/msg/: BatteryInfo.msg  BatteryState.msg  InnerData.msg
bridge/msgs/mc_state_msgs/: CMakeLists.txt  package.xml
bridge/msgs/mc_state_msgs/msg/: RobotState.msg
bridge/msgs/mc_task_msgs/: CMakeLists.txt  package.xml
bridge/msgs/mc_task_msgs/msg/: JointCmd.msg  JointCommand.msg  RobotCommand.msg
bridge/msgs/mc_task_msgs/srv/: GaitModeSwitch.srv
bridge/msgs/rosa_msgs/: CMakeLists.txt  package.xml
bridge/msgs/rosa_msgs/msg/: NodeState.msg
bridge/msgs/shm_msgs/: CMakeLists.txt  package.xml
bridge/msgs/shm_msgs/msg/: Image1m.msg  String.msg
bridge/msgs/sys_task_msgs/: CMakeLists.txt  package.xml
bridge/msgs/sys_task_msgs/action/: Tts.action
bridge/msgs/sys_task_msgs/msg/: Asr.msg  PcmChunk.msg  PcmStreamStatus.msg
examples/: client_motion.py  client_record_mic.py  client_tts.py  mock_bridge_server.py
