<?xml version="1.0"?>
<package format="3">
  <name>emb_task_msgs</name>
  <version>0.0.0</version>
  <description>This is the emb_task_msgs package</description>

  <maintainer email="zhanjia.bi@ubtrobot.com">bzj</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Standard ROS2 message generator -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Runtime dependency for generated messages -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Allow other packages to find interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
