<?xml version="1.0"?>
<package format="3">
  <name>shm_msgs</name>
  <version>0.0.1</version>
  <description>Message definitions for SDK code</description>

  <maintainer email="ziheng.li@ubtrobot.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 如果你的 msg 里依赖 std_msgs / geometry_msgs，需要加 -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- 标记这是一个接口包 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
